debug/huginn/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: huginn
  labels:
    app: huginn
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.x9.rs/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.x9.rs/oauth2/start?rd=https://$host$uri"
    hajimari.io/enable: "true"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - huginn.x9.rs
      secretName: my-certs-huginn
  rules:
    - host: huginn.x9.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: huginn
                port:
                  name: http
